2003-09-11  Lluis Sanchez Gual <lluis@ximian.com>

	* NetworkStream.cs: Added [In,Out] attributes to Read method.

2003-08-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TcpListener.cs: various fixes to make the new tests pass. Closes
	bug #47848.

2003-08-10  Miguel de Icaza  <miguel@ximian.com>

	* UdpClient.cs (Receive): Fix Bug 45633;  We should do a blocking
	call until a datagram is arrives from the remote host.  This
	removes the 512 "magic" buffer size when we did not have any data.

2003-07-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NetworkStream.cs:
	* Socket.cs: fixed array boundary checks. 0 sized arrays are allowed.

2003-07-18  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* Socket.cs: Added GetHashCode method

2003-07-14  Jerome Laban <jlaban@wanadoo.fr>

	* Socket.cs:
	* ProtocolType.cs:
	* SocketOptionLevel.cs:
	* TcpListener.cs:
	* TcpClient.cs:
	* UdpClient.cs:
	
	Added IPv6 support.

	* IPv6MulticastOption.cs: Added for IPv6 support.

2003-05-16  Dick Porter  <dick@ximian.com>

	* Socket.cs: Use Mono.Posix.UnixEndPoint if its available

2003-05-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MulticastOption.cs: patch by Jerome Laban included in bug #42393.

2003-05-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Socket.cs:
        (Select): don't create arrays if not needed.
        (Poll): call Select_internal directly.

	Warning: you need an up to date runtime for this to work!

2003-03-25  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UdpClient.cs: don't bind the socket unless .ctor (IPEndPoint) is used.
	Added more checks and throws.
	Small fixes in Send to avoid duplicating the buffer.
	Moved CheckIfDisposed calls to the start of the methods instead of doing
	the check inside a finally clause.

2003-03-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Socket.cs:
	(SendTo): fix from Jerome Laban <jlaban@wanadoo.fr>.

2003-02-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>
